syntax = "proto3";

option java_package = "com.proto.calculator";
option java_multiple_files = true;
option java_outer_classname = "CalculatorProtos";

message AddRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message AddResponse {
    int32 result = 1;
}

// service Calculator {
//     rpc add(AddRequest) returns (AddResponse);
// }
